mere tekst på undersiderne er tilføjet

--- a/html/om_mig.html
+++ b/html/om_mig.html
@@ -97,7 +97,7 @@
             fritid finder jeg stor glæde ved at tegne og male. Jeg elsker også
             at tage stemningsfulde billeder af de ting, jeg oplever, og fange
             øjeblikke, der fortæller en historie. Derudover har jeg også en stor
-            passion for indretning og boligtrends.
+            passion for indretning.
           </p>
         </div>
       </section>
