--- a/html/tema3.html
+++ b/html/tema3.html
@@ -66,16 +66,9 @@
             idéudviklingsmetoder, forskellige prototyper samt relevante former
             for test.
           </p>
-          <p>
-            I denne opgave besluttede jeg at lave et meget stilrent, enkelt og
-            minimalistisk design. Dette bevidste valg tog jeg, da jeg ønskede,
-            at mit endelige kodede resultat skulle ligge så tæt som muligt op ad
-            min digitale prototype. Selvom jeg kom i mål med dette, blev jeg
-            alligevel udfordret af kodningen, på trods af det enkle design.
-          </p>
         </div>
         <div>
-          <h2>Eksempel på kode</h2>
+          <h2>Design og research</h2>
           <img
             src="../img/procesbilledetema3.png"
             alt="billede 2"
