--- a/html/tema5.html
+++ b/html/tema5.html
@@ -1,107 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="da">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/layout.css" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <title>Tema 5</title>
-  </head>
-  <body>
-    <header>
-      <div class="logo">
-        <a href="index.html">
-          <img
-            src="../img/logo_endelige.svg"
-            alt="Logo"
-            height="50"
-            width="50"
-          />
-        </a>
-      </div>
-      <input type="checkbox" id="menu-toggle" />
-      <label for="menu-toggle" class="menu-icon">
-        <div class="menu-icon-line"></div>
-        <div class="menu-icon-line"></div>
-        <div class="menu-icon-line"></div>
-      </label>
-      <nav>
-        <ul class="menu">
-          <li><a href="../index.html">Forside</a></li>
-          <li><a href="projekter.html">Projekter</a></li>
-          <li><a href="om_mig.html">Om mig</a></li>
-        </ul>
-      </nav>
-    </header>
-    <hr />
-    <main>
-      <h1>Tema 5</h1>
-      <section class="gridtema5_1-1">
-        <img
-          src="../img/tema5.png"
-          alt="billede 1" width="900" height="900"
-        />
-      <div>
-        <h2>Grundlæggende indhold</h2>
-      <h3>Passionsite</h3>
-        <p>
-          I den første opgave skulle vi lave en "Passionsite", altså en hjemmeside omhandlende en person med en passion. Vi blev sat sammen to og to, så vi var to om at optage materialet til videoindholdet til sitet. Det vil dermed sige, at selve videoredigeringen og kodningen af sitet var noget, vi lavede individuelt.
-        </p>
-        <p>
-          Jeg lavede et site omhandlende Naomi Jamakaovic, som er i gang med at uddanne sig til tøjdesigner, også på KEA. Til denne opgave var wireframes og layoutdiagrammer udleveret, så fokusset lå primært på at prøve kræfter med at lave en video til sitet samt at tage nogle spændende billeder til sitet. I denne opgave erfarede jeg også, hvor stor en hjælp det er at have lavet et storyboard, inden man tager ud og optager.
-        </p>
-        <p>
-          Under denne opgave fik jeg et større kendskab til videoredigering i Premiere Pro. Derudover blev jeg også bekendt med begreber som adjustment layers, color grading, billedformater og anden relevant klippeteori. Jeg lavede også et moodboard for at beslutte, hvilket udtryk siden skulle have, så jeg bedst muligt fik afspejlet min interviewperson i sitets udtryk.
-        </p>
-      </section>
-      <section class="gridtema02_1-1">
-        <img
-          src="../img/tema5gruppe.png"
-          alt="billede 2" width="900" height="900"
-        />
-        <h2>Virksomhedssite</h2>
-        <div>
-        <p>
-          I anden opgave arbejdede vi i grupper af fire. Her fik vi til opgave at redesigne en virksomheds nuværende hjemmeside. Det var op til os i gruppen at bestemme, hvilket redesign hjemmesiden skulle have (layout) samt på hvilken måde vi ville implementere video på.
-        </p>
-        <p>
-          I denne opgave blev vi introduceret til, hvordan man effektivt arbejder sammen i teams, og i den forbindelse blev vi introduceret til Scrum, Trello og GitHub - som endte med at blive en stor hjælp gennem vores projekt.
-
-Opgaven var en oplagt mulighed for at få genopfrisket alle de ting, vi havde lært gennem første semester. Det gav dermed en mere omfattende forståelse af de elementer, der er vigtige, når det kommer til design, kodning og test.
-        </p>
-        <p>
-          I redesign-opgaven havde jeg ansvaret for at kode undersiden "Vi udfører". Derudover deltog jeg også i mødet for "Scrum of Scrums". Her havde jeg til opgave at videreformidle til de andre scrum masters i de andre grupper, hvor langt vi i vores gruppe var i vores proces, samt hvilke problemstillinger vi var løbet ind i på det givne tidspunkt.
-        </p>
-      </div>
-      </div>
-      </section>
-      <section class="gridnederst_1-1">
-        <div class="link-container">
-          <h2>Links</h2>
-          <a href="https://byas.dk/kea/05_passionsite/passionsite/" target="Link til passionsite opgaven">Link til passionsite</a>
-          <a href="http://byas.dk/kea/05_virksomhedssite/website/ " target="link til virksomhedssite opgaven">Link til virksomhedssite</a>
-        </div>
-        <div>
-          <h2>Kompetencer</h2>
-          <ul>
-            <li>Html forms og videoplatforme</li>
-            <li>Filformater</li>
-            <li>Introduktion til Github</li>
-            <li>Præsentation og dokumentation</li>
-            <li>Beskæring og colorgrading</li>
-            <li>Premiere pro og after effects</li>
-            <li>Storybord</li>
-            <li>Klippeteori</li>
-            <li>Scrum og trello</li>
-          </ul>
-        </div>
-      </section>
-    </main>
-    <hr />
-    <footer>&copy;Anne-Sophie Falck Winther 2024</footer>
-  </body>
-</html> -->
-TEST
 <!DOCTYPE html>
 <html lang="da">
   <head>
@@ -154,39 +50,44 @@ TEST
             Tema 5 havde til formål at give mig et grundlæggende indblik i
             indholdsproduktion - herunder præproduktion, selve produktion og
             postproduktion. Her blev jeg præsenteret for optagelse af video med
-            ekstern lyd, Premiere Pro og Audition til redigering. Dette er
-            nødvendig viden for at kunne lave indholdsproduktioner selv samt at
-            kunne kommunikere professionelt med kunder. Derudover blev jeg også
-            introduceret til filformater, HTML forms/videotags i HTML, GitHub og
-            relevante begreber inden for videoproduktion. I dette tema fik vi
-            stillet to forskellige opgaver.
+            ekstern lyd, Premiere Pro og Audition til redigering. Derudover blev
+            jeg også introduceret til filformater, HTML forms/videotags i HTML,
+            GitHub og relevante begreber inden for videoproduktion. I dette tema
+            fik vi stillet to forskellige opgaver.
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-            totam minus voluptatum enim minima! Exercitationem necessitatibus
-            saepe magnam repellendus, nihil deserunt explicabo ullam, doloremque
-            quo ipsam, commodi dolore eius!
+            I den første opgave skulle jeg lave et "Passionsite", altså en
+            hjemmeside omhandlende en passioneret person. Her lavede jeg et site
+            omhandlende Naomi Yamakawa. Til denne opgave var wireframes og
+            layoutdiagrammer udleveret, så fokusset lå primært på at
+            implementere en video på sitet samt at blive bedre til
+            videoredigering. Derudover prøvede jeg også kræfter med
+            implementering og design af en lottifile.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam,
-            illum. Magnam facere est mollitia veniam eligendi aliquam sit?
-            Mollitia temporibus ut aspernatur exercitationem animi officia
-            recusandae praesentium cumque tenetur sapiente?
+            Under denne opgave fik jeg et større kendskab til videoredigering i
+            Premiere Pro, og jeg blev bekendt med begreber som adjustment
+            layers, color grading, billedformater og anden relevant klippeteori.
           </p>
         </div>
         <div>
-          <h2>Eksempel for kode</h2>
+          <h2>Eksempel over storyboard</h2>
+          <h3>Passionsite</h3>
           <img
-            src="../img/tema5.png"
+            src="../img/skitser_tema5.png"
             alt="billede 1"
             width="900"
             height="900"
           />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
-            aliquam iusto optio obcaecati dolores repudiandae minima est.
-            Eveniet minima ad expedita corrupti? Repellendus et tempora nemo
-            magnam hic aspernatur non.
+            Inden jeg gik i gang med at optage mit videointerview, lavede jeg et
+            storyboard. Et storyboard er en skitse, som hjælper med visuelt at
+            skitsere og planlægge scenerne, der skal indgå i produktionen. Hver
+            skitse repræsenterer et skud, der skal tages. På disse skitser
+            noterede jeg også, hvilke vinkler, spørgsmål og emner der skulle
+            dækkes i de forskellige klip. Dette var en essentiel del af
+            forarbejdet og gjorde processen med at optage videoen en hel del
+            nemmere og mere overskuelig.
           </p>
         </div>
       </section>
@@ -204,7 +105,7 @@ TEST
             I den anden opgave arbejdede vi i grupper af fire. Her fik vi til
             opgave at redesigne en virksomheds nuværende hjemmeside. Det var op
             til os i gruppen at bestemme, hvilket redesign hjemmesiden skulle
-            have (layout), samt på hvilken måde vi ville implementere video.
+            have, samt på hvilken måde vi ville implementere video.
           </p>
           <p>
             I denne opgave blev vi introduceret til, hvordan man effektivt
@@ -213,33 +114,29 @@ TEST
             gennem vores projekt.
           </p>
           <p>
-            Opgaven var en oplagt mulighed for at få genopfrisket alle de ting,
-            vi havde lært gennem første semester. Det gav dermed en mere
-            omfattende forståelse af de elementer, der er vigtige, når det
-            kommer til design, kodning og test.
-          </p>
-          <p>
             I redesign-opgaven havde jeg ansvaret for at kode undersiden "Vi
-            udfører". Derudover deltog jeg også i mødet for "Scrum of Scrums".
-            Her havde jeg til opgave at videreformidle til de andre scrum
-            masters i de andre grupper, hvor langt vi i vores gruppe var i vores
-            proces, samt hvilke problemstillinger vi var løbet ind i på det
-            givne tidspunkt.
+            udfører" samt at lave et redesign af virksomhedens logo. Derudover
+            deltog jeg også i mødet for "Scrum of Scrums". Her havde jeg til
+            opgave at videreformidle til de andre scrum masters i de andre
+            grupper, hvor langt vi i vores gruppe var i vores proces, samt
+            hvilke problemstillinger vi var løbet ind i på det givne tidspunkt.
           </p>
         </div>
         <div>
-          <h2>Eksempel for kode</h2>
+          <h2>Logo i Adobe Illustrator</h2>
+          <h3>Virksomhedssite</h3>
           <img
-            src="../img/tema5gruppe.png"
+            src="../img/redesignlogo5.png"
             alt="billede 1"
             width="900"
             height="900"
           />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
-            aliquam iusto optio obcaecati dolores repudiandae minima est.
-            Eveniet minima ad expedita corrupti? Repellendus et tempora nemo
-            magnam hic aspernatur non.
+            Som tidligere nævnt havde jeg til ansvar at lave et redesign af
+            virksomhedens nuværende logo. Dette var det endelige resultat af
+            redesignet. Logoet tegnede jeg i Adobe Illustrator ved hjælp af
+            værktøjet "Paint Brush". Jeg rentegnede logoet ud fra nogle skitser,
+            jeg først havde lavet på papir.
           </p>
         </div>
       </section>
@@ -277,116 +174,3 @@ TEST
     <footer>&copy;Anne-Sophie Falck Winther 2024</footer>
   </body>
 </html>
-
-TEST
-
-<!-- <!DOCTYPE html>
-<html lang="da">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/layout.css" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <title>Tema 5</title>
-  </head>
-  <body>
-    <header>
-      <div class="logo">
-        <a href="index.html">
-          <img
-            src="../img/logo_endelige.svg"
-            alt="Logo"
-            height="50"
-            width="50"
-          />
-        </a>
-      </div>
-      <input type="checkbox" id="menu-toggle" />
-      <label for="menu-toggle" class="menu-icon">
-        <div class="menu-icon-line"></div>
-        <div class="menu-icon-line"></div>
-        <div class="menu-icon-line"></div>
-      </label>
-      <nav>
-        <ul class="menu">
-          <li><a href="../index.html">Forside</a></li>
-          <li><a href="projekter.html">Projekter</a></li>
-          <li><a href="om_mig.html">Om mig</a></li>
-        </ul>
-      </nav>
-    </header>
-    <hr />
-    <main>
-      <h1>Tema 5</h1>
-      <section class="gridtema5_1-1”>
-      <div>
-          <h2>grundlæggende indhold</h2>
-          <img
-          src="../img/tema5.png"
-          alt="billede 1" width="900" height="900"/>
-
-          <h3>Passionsite</h3>
-        <p>
-          I den første opgave skulle vi lave en "Passionsite", altså en hjemmeside omhandlende en person med en passion. Vi blev sat sammen to og to, så vi var to om at optage materialet til videoindholdet til sitet. Det vil dermed sige, at selve videoredigeringen og kodningen af sitet var noget, vi lavede individuelt.
-        </p>
-        <p>
-          Jeg lavede et site omhandlende Naomi Jamakaovic, som er i gang med at uddanne sig til tøjdesigner, også på KEA. Til denne opgave var wireframes og layoutdiagrammer udleveret, så fokusset lå primært på at prøve kræfter med at lave en video til sitet samt at tage nogle spændende billeder til sitet. I denne opgave erfarede jeg også, hvor stor en hjælp det er at have lavet et storyboard, inden man tager ud og optager.
-        </p>
-        <p>
-          Under denne opgave fik jeg et større kendskab til videoredigering i Premiere Pro. Derudover blev jeg også bekendt med begreber som adjustment layers, color grading, billedformater og anden relevant klippeteori. Jeg lavede også et moodboard for at beslutte, hvilket udtryk siden skulle have, så jeg bedst muligt fik afspejlet min interviewperson i sitets udtryk.
-        </p>
-
-        </div>
-        <div>
-          <h2>Virksomhedssite
-</h2>
-           <img
-          src="../img/tema5gruppe.png"
-          alt="billede 2" width="900" height="900"
-        />
-
-          <p>
-          I anden opgave arbejdede vi i grupper af fire. Her fik vi til opgave at redesigne en virksomheds nuværende hjemmeside. Det var op til os i gruppen at bestemme, hvilket redesign hjemmesiden skulle have (layout) samt på hvilken måde vi ville implementere video på.
-        </p>
-        <p>
-          I denne opgave blev vi introduceret til, hvordan man effektivt arbejder sammen i teams, og i den forbindelse blev vi introduceret til Scrum, Trello og GitHub - som endte med at blive en stor hjælp gennem vores projekt.
-
-Opgaven var en oplagt mulighed for at få genopfrisket alle de ting, vi havde lært gennem første semester. Det gav dermed en mere omfattende forståelse af de elementer, der er vigtige, når det kommer til design, kodning og test.
-        </p>
-        <p>
-          I redesign-opgaven havde jeg ansvaret for at kode undersiden "Vi udfører". Derudover deltog jeg også i mødet for "Scrum of Scrums". Her havde jeg til opgave at videreformidle til de andre scrum masters i de andre grupper, hvor langt vi i vores gruppe var i vores proces, samt hvilke problemstillinger vi var løbet ind i på det givne tidspunkt.
-        </p>
-
-        </div>
-      </section>
-
-      <section class="gridnederst_1-1">
-        <div class="link-container">
-          <h2>Links</h2>
-           <a href="https://byas.dk/kea/05_passionsite/passionsite/" target="Link til passionsite opgaven">Link til passionsite</a>
-          <a href="http://byas.dk/kea/05_virksomhedssite/website/ " target="link til virksomhedssite opgaven">Link til virksomhedssite</a>
-        
-
-          <a href="../index.html" target="_blank">besøg link</a>
-        </div>
-        <div>
-          <h2>Kompetencer</h2>
-          <ul>
-           <li>Html forms og videoplatforme</li>
-            <li>Filformater</li>
-            <li>Introduktion til Github</li>
-            <li>Præsentation og dokumentation</li>
-            <li>Beskæring og colorgrading</li>
-            <li>Premiere pro og after effects</li>
-            <li>Storybord</li>
-            <li>Klippeteori</li>
-            <li>Scrum og trello</li>
-
-          </ul>
-        </div>
-      </section>
-    </main>
-    <hr />
-    <footer>&copy;Anne-Sophie Falck Winther 2024</footer>
-  </body>
-</html> -->
