ændringer i indhold - h3 tilføjet

--- a/html/tema2.html
+++ b/html/tema2.html
@@ -77,14 +77,15 @@
             width="900"
             height="900"
           />
+          <h3>Wireframes</h3>
           <p>
-            Her er det wireframe og layoutdiagram, vi blev udleveret. Som
-            udgangspunkt koder man altid mobil først, og derefter tilpasser man
-            det til webformat. Dette er betegnelsen for et responsivt design.
-            Formålet med responsivt design er at sikre, at brugeroplevelsen
-            forbliver optimal på tværs af forskellige enheder, herunder
-            computere, tablets og telefoner. Et responsivt design opnås ved
-            hjælp af medieforespørgsler (media queries).
+            Her ses det wireframe, vi fik udleveret. Som udgangspunkt koder man
+            altid mobil først, og derefter tilpasser man det til webformat.
+            Dette er betegnelsen for et responsivt design. Formålet med
+            responsivt design er at sikre, at brugeroplevelsen forbliver optimal
+            på tværs af forskellige enheder, herunder computere, tablets og
+            telefoner. Et responsivt design opnås ved hjælp af
+            medieforespørgsler (media queries).
           </p>
           <img
             src="../img/layoutdiagramtema2.png"
@@ -92,13 +93,14 @@
             width="900"
             height="900"
           />
-
+          <h3>Layoutdiagrammer</h3>
           <p>
-            Layoutdiagrammer er nyttige, fordi de giver et visuelt overblik
-            over, hvordan en hjemmeside skal se ud. Dette gør også, at
-            kodningsprocessen bliver mere overskuelig, da man kan få et overblik
-            over, hvordan layoutet skal kodes ud fra de HTML-tags, der er
-            defineret på layoutdiagrammet.
+            Her ses det Layoutdiagram, vi fik udleveret. Layoutdiagrammer er
+            nyttige, fordi de giver et visuelt overblik over, hvordan en
+            hjemmeside skal se ud. Dette gør også, at kodningsprocessen bliver
+            mere overskuelig, da man kan få et overblik over, hvordan layoutet
+            skal kodes ud fra de HTML-tags, der er defineret på
+            layoutdiagrammet.
           </p>
         </div>
       </section>
@@ -110,7 +112,7 @@
           >
         </div>
         <div>
-          <h2>Kompetencer</h2>
+          <h2>Nye kompetencer:</h2>
           <ul>
             <li>Billede formater</li>
             <li>Javascript</li>
@@ -122,7 +124,7 @@
             <li>CSS animation</li>
             <li>UML aktivitetsprogrammer og State machine diagrammer</li>
             <li>Individuel projektudvikling</li>
-            <li>Research & genre</li>
+            <li>Research</li>
           </ul>
         </div>
       </section>
