--- a/html/tema3.html
+++ b/html/tema3.html
@@ -53,8 +53,6 @@
             gav mig en relevant forståelse af vigtigheden af at træffe
             designvalg og udvikle produkter baseret på konkrete indsigter om
             faktiske brugere fremfor antagelser og designvalg uden belæg.
-            Samtidig lærte jeg, hvordan man præsenterer sin proces og formidler
-            sin research og testresultater på en relevant og spændende måde.
           </p>
           <p>
             I dette tema fik jeg til opgave at udvikle en hjemmeside baseret på
@@ -93,13 +91,15 @@
             billeder, tekst og knapper. Dette gjorde kodningsprocessen nemmere
             og mere overskuelig, da alle designvalg var taget på forhånd.
           </p>
-          <img src="../img/procesbilledetema3.0.png" alt="Billede fra test" />
+
           <p>
             Efter at have skabt en veludarbejdet prototype, testede jeg min side
             med tænke-højt-test og 5-sekunders-test for at se, hvordan brugerne
             opfattede designet, og om der var nødvendige ændringer, inden jeg
             begyndte at kode.
           </p>
+          <h3>Test resultater</h3>
+          <img src="../img/procesbilledetema3.0.png" alt="Billede fra test" />
         </div>
       </section>
       <section class="gridnederst_1-1">
@@ -112,10 +112,10 @@
           >
         </div>
         <div>
-          <h2>Kompetencer</h2>
+          <h2>Nye kompetencer:</h2>
           <ul>
             <li>UX/UI konventioner</li>
-            <li>Indholdsproduktion - desktop research</li>
+            <li>Indholdsproduktion og research</li>
             <li>Moodboard</li>
             <li>Styletile</li>
             <li>Wireframes</li>
