--- a/html/tema4.html
+++ b/html/tema4.html
@@ -95,6 +95,7 @@
             width="900"
             height="900"
           />
+          <h3>Beskrivelse af funktionen "resetKlover"</h3>
           <p>
             I funktionen "resetKlover" fjernes alle klasser fra både container
             og sprite. Derefter tildeles figuren en ny position, som er lavet
@@ -115,7 +116,7 @@
           >
         </div>
         <div>
-          <h2>Kompetencer</h2>
+          <h2>Nye kompetencer:</h2>
           <ul>
             <li>Billede formater</li>
             <li>Javascript</li>
