--- a/html/tema5.html
+++ b/html/tema5.html
@@ -71,8 +71,8 @@
           </p>
         </div>
         <div>
-          <h2>Eksempel over storyboard</h2>
-          <h3>Passionsite</h3>
+          <h2>Mit storyboard</h2>
+          <!-- <h3>Passionsite</h3> -->
           <img
             src="../img/skitser_tema5.png"
             alt="billede 1"
@@ -123,8 +123,8 @@
           </p>
         </div>
         <div>
-          <h2>Logo i Adobe Illustrator</h2>
-          <h3>Virksomhedssite</h3>
+          <h2>Logo tegnet i Adobe Illustrator</h2>
+          <!-- <h3>Virksomhedssite</h3> -->
           <img
             src="../img/redesignlogo5.png"
             alt="billede 1"
@@ -137,6 +137,15 @@
             redesignet. Logoet tegnede jeg i Adobe Illustrator ved hjælp af
             værktøjet "Paint Brush". Jeg rentegnede logoet ud fra nogle skitser,
             jeg først havde lavet på papir.
+          </p>
+          <img src="../img/trelloboardtema5.png" alt="Billede af trello" />
+          <h3>Udklip fra trello board</h3>
+          <p>
+            Dette er et udklip fra vores Trello-board. Trello-boardet var en
+            stor hjælp under vores gruppeprojekt, da det var med til at skabe
+            overblik over, hvilke ting der manglede at blive lavet, samt hvilke
+            ting vi var kommet i mål med. Derudover hjalp det også med, at vi
+            kunne opretholde overblikket gennem hele projektet.
           </p>
         </div>
       </section>
@@ -155,7 +164,7 @@
           >
         </div>
         <div>
-          <h2>Kompetencer</h2>
+          <h2>Nye kompetencer:</h2>
           <ul>
             <li>Html forms og videoplatforme</li>
             <li>Filformater</li>
