--- a/html/projekter.html
+++ b/html/projekter.html
@@ -11,7 +11,12 @@
     <header>
       <div class="logo">
         <a href="index.html">
-          <img src="../img/logo_endelige.svg" alt="Logo" height="50" width="50" />
+          <img
+            src="../img/logo_endelige.svg"
+            alt="Logo"
+            height="50"
+            width="50"
+          />
         </a>
       </div>
       <input type="checkbox" id="menu-toggle" />
@@ -34,64 +39,63 @@
       <div class="grid_1-1-1-1">
         <div class="image-container">
           <a href="tema2.html">
-          <img
-            src="../img/tema0.2.png"
-            alt="Billede af Tema 2"
-            class="image"
-          />
-          <div class="overlay">
-            <div class="overlay-text">
-              <h2>Tema 2</h2>
-              Grundlæggende Web
+            <img
+              src="../img/tema0.2.png"
+              alt="Billede af Tema 2"
+              class="image"
+            />
+            <div class="overlay">
+              <div class="overlay-text">
+                <h2>Tema 2</h2>
+                Grundlæggende Web
+              </div>
             </div>
-          </div>
           </a>
         </div>
         <div class="image-container">
           <a href="tema3.html">
-          <img
-            src="../img/tema0.3.png"
-            alt="Billede af Tema 3"
-            class="image"
-          />
-          <div class="overlay">
-            <div class="overlay-text">
-              <h2>Tema 3</h2>
-               Grundlæggende UX/UI
+            <img
+              src="../img/tema0.3.png"
+              alt="Billede af Tema 3"
+              class="image"
+            />
+            <div class="overlay">
+              <div class="overlay-text">
+                <h2>Tema 3</h2>
+                Grundlæggende UX/UI
+              </div>
             </div>
-          </div>
           </a>
         </div>
         <div class="image-container">
           <a href="tema4.html">
-          <img
-            src="../img/tema.04.png"
-            alt="Billede af Tema 4"
-            class="image"
-          />
-          <div class="overlay">
-            <div class="overlay-text">
-              <h2>Tema 4</h2>
-              Animation
+            <img
+              src="../img/tema.04.png"
+              alt="Billede af Tema 4"
+              class="image"
+            />
+            <div class="overlay">
+              <div class="overlay-text">
+                <h2>Tema 4</h2>
+                Animation
+              </div>
             </div>
-          </div>
           </a>
         </div>
-          <div class="image-container">
+        <div class="image-container">
           <a href="tema5.html">
-          <img
-            src="../img/tema0.5.png"
-            alt="Billede af Tema 5"
-            class="image"
-          />
-          <div class="overlay">
-            <div class="overlay-text">
-              <h2>Tema 5</h2>
-              Grundlæggende indhold
+            <img
+              src="../img/tema0.5.png"
+              alt="Billede af Tema 5"
+              class="image"
+            />
+            <div class="overlay">
+              <div class="overlay-text">
+                <h2>Tema 5</h2>
+                Grundlæggende indhold
+              </div>
             </div>
-          </div>
           </a>
-        </div>
         </div>
       </div>
     </main>
